Upgrade to Marathon 1.6.322.